# PersonalProjects

./: .Kubuntu.txt  .gitignore  README.md
C/: CTut.c  CTutorial
CSS/CSSTut/: CSSTutorials.txt
CSS/CSSTut2/: StyleSheet2.css
CSS/CSSTut3/: CSSTut3.html  StyleSheet3.css
CSS/CSSTut7/: CSSTut7.html
CSS/CSSTut8/: CSSTut8.html
CSS/Hospital Animation/: HospitalAnimation.html  StyleSheet.css
CalendarCalculator/: .gitignore  calculator.py  helpers.py
Chemistry Review/: Chemistry Review.aux  Chemistry Review.tex  Chemistry Review.toc
HTML/HTMLTut/: HTMLTut.html  United.js  index.html  style.css
Java/: Searching Algorithms.lnk  Sorting Algorithms.lnk  Top 50 Coding Interviews.lnk  run.bat
Java/Scratch Java/: Scratch.java  printer.java
JavaScript/JSTut/: JSTut.js  JSTutHtml.html
JavaScript/React Native/: openCode.txt
JavaScript/Scratch/: Scratch.html  Scratch.js
JavaScript/SlideShow/: slideshow.html
JavaScript/p5.js/: template.txt
LaTex/1 = 2 Proof/: 1 = 2 Proof.tex
LaTex/532 Example/: 532 Final.tex
LaTex/LatexTut/: LatexTut.tex
LaTex/Quadratic Equation/: Quadratic Equation.tex
LeetCode/AddTwoNums/: Problem.py  Solution.py
LeetCode/RainWater/: Solution.py
Matlab/: FlyStraight.m  RothIRA.m  gcd.m  hello.ps
Programming Languages Tutorials/CMakeTut/helloExe/: CMakeLists.txt
Programming Languages Tutorials/CMakeTut/printHello/: CMakeLists.txt
Programming Languages Tutorials/CMakeTut/printHello/src/printHello/: printHello.h
Website/: Contact.html  Home.html  Projects.html  Resume.html  Transcripts.html  Tutoring.html  index.html
(+405 files in other folders)
